Fix: styles no padding bottom on overflow

--- a/src/app/home/signed-out/signed-out.component.scss
+++ b/src/app/home/signed-out/signed-out.component.scss
@@ -6,7 +6,7 @@
         "main";
     grid-template-rows: max-content auto;
     gap: 1rem;
-    height: 100%;
+    min-height: calc(100vh - 2rem);
 }
 
 main
