--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,12 +17,6 @@
     box-sizing: border-box;
 }
 
-html,
-body
-{
-    height: 100%;
-}
-
 body
 {
     margin: 0 auto;
